# Projeto-com-fast-API

./: .coverage  pyproject.toml
tests/: test_app.py
